knoq-dev/backend-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: knoq-backend
spec:
  template:
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - eee101.tokyotech.org
              weight: 1

      containers:
        - name: knoq-backend
          image: ghcr.io/traptitech/knoq:main@sha256:30bec7b48b3be8a47122c1c7289a3e64b65c5b93367029b3b08f822008e3c1c5
          resources:
            requests:
              cpu: "10m"
              memory: "32Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"
