knoq-dev/frontend-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: knoq-frontend
spec:
  template:
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - eee101.tokyotech.org
              weight: 1

      containers:
        - name: knoq-frontend
          image: ghcr.io/traptitech/knoq-ui-v1:master@sha256:b50fd17e208a2160e7ed579462646337c089a8dc240e9638bc16758bf2cc8a6c
          resources:
            requests:
              cpu: "10m"
              memory: "32Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"
