knoq-dev/ingress-route-patch.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: knoq
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`knoq-dev.trapti.tech`) && PathPrefix(`/api`)
      kind: Rule
      services:
        - name: knoq-backend
          port: 3000
    - match: Host(`knoq-dev.trapti.tech`)
      kind: Rule
      middlewares:
        - name: auth-trapti-tech-hard
          namespace: auth
      services:
        - name: knoq-frontend
          port: 80
